updated changes after testing

--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,7 @@
 {
 	"baseUrl": "http://10.70.43.205/api/1.0/",
-	"refreshIntervalTime": 120,
+	"refreshIntervalTime": 5,
+	"nodeRefreshIntervalTime":  120,
 	"msgRefreshIntervalTime": 5,
 	"statusRefreshIntervalTime": 5,
 	"defaultThresholds" : {
